Models, Intarface, Classes, Web

--- a/TapAndScroll.Web/wwwroot/css/site.css
+++ b/TapAndScroll.Web/wwwroot/css/site.css
@@ -1,22 +1,25 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  margin-bottom: 60px;
+    background-color: #202020;
+}
+
+/* Custom CSS for navigation */
+.navbar {
+    background-color: #1a1a1a; /* Основной цвет фона */
+    font-size: larger;
+}
+
+.navbar-brand {
+    color: #fff; /* Белый цвет текста */
+}
+
+.navbar-nav .nav-link {
+    color: #fff; /* Белый цвет текста */
+}
+
+    .navbar-nav .nav-link:hover {
+        color: #00AE68; /* Первый цвет акцента при наведении */
+    }
+
+.navbar-toggler-icon {
+    background-color: #fff; /* Белый цвет иконки переключателя */
 }
