Auth Middleware - Better JWTAuth - Add Middleware for redirect - Add Attr for UploadRegModel

--- a/TapAndScroll.Web/Views/Authorize/Login.cshtml
+++ b/TapAndScroll.Web/Views/Authorize/Login.cshtml
@@ -21,7 +21,7 @@
                         <span asp-validation-for="Password"></span>
                         <input asp-for="Password" type="password" class="form-control" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+                    <button type="submit" class="btn btn-primary">Войти</button>
                 </form>
             </div>
         </div>
