--- a/TapAndScroll.Web/Views/Shared/_Layout.cshtml
+++ b/TapAndScroll.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#">Контакты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Authorize" asp-action="Register">Аккаунт</a>
+                            <a class="nav-link" asp-controller="Authorize" asp-action="Login">Аккаунт</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
