--- a/TapAndScroll.Web/Views/Admin/AddProduct.cshtml
+++ b/TapAndScroll.Web/Views/Admin/AddProduct.cshtml
@@ -18,19 +18,19 @@
                     </div>
                     <div class="mb-3">
                         <label asp-for="@Model.UploadProduct.Brand" class="form-label">Название Бренда</label>
-                        <input asp-for="@Model.UploadProduct.Brand" class="form-control" required>
+                        <input asp-for="@Model.UploadProduct.Brand" class="form-control product" required>
                     </div>
                     <div class="mb-3">
                         <label asp-for="@Model.UploadProduct.Price" class="form-label">Цена</label>
-                        <input asp-for="@Model.UploadProduct.Price" class="form-control" required>
+                        <input asp-for="@Model.UploadProduct.Price" class="form-control product" required>
                     </div>
                     <div class="mb-3">
                         <label asp-for="@Model.UploadProduct.IsGaming" class="form-label">Игровой?</label>
-                        <input asp-for="@Model.UploadProduct.IsGaming" class="form-check-input radio-btn" required>
+                        <input asp-for="@Model.UploadProduct.IsGaming" class="form-check-input radio-btn product" required>
                     </div>
                     <div class="mb-3">
                         <label asp-for="@Model.UploadProduct.DiscountPercent" class="form-label">Скидка на товар в процентах</label>
-                        <input asp-for="@Model.UploadProduct.DiscountPercent" class="form-control">
+                        <input asp-for="@Model.UploadProduct.DiscountPercent" class="form-control product">
                     </div>
                     <div class="mb-3">
                         <label asp-for="@Model.UploadProduct.Description" class="form-label">Описание Товара</label>
