--- a/TapAndScroll.Web/Views/Catalog/Index.cshtml
+++ b/TapAndScroll.Web/Views/Catalog/Index.cshtml
@@ -12,7 +12,7 @@
                     <input asp-for="@Model.FilterUpload.CategoryId" value="@Model.Category.IdCategory" hidden="hidden" />
                     <div class="mb-3">
                         <label asp-for="@Model.FilterUpload.Brand" class="form-label">Название Бренда</label>
-                        <input name="Brand" class="form-control product">
+                        <input asp-for="@Model.FilterUpload.Brand" name="Brand" class="form-control product">
                     </div>
                     <div class="mb-3">
                         <h3>Цена</h3>
@@ -62,29 +62,33 @@
     </div>
 </div>
 
-<script>
-    document.getElementById("filterForm").onsubmit = function () {
-        let parameters = document.getElementById("Parameters");
-        parameters.value = '';
-        let inputs = document.querySelectorAll("input, textarea");
-        for (let i = 1; i < inputs.length; i++) {
-            if (inputs[i].id === "Parameters" || inputs[i].name === "__RequestVerificationToken" || inputs[i].name === "FilterUpload.CategoryId") {
-                continue; // Skip the AdditionalParameters, __RequestVerificationToken and CategoryId inputs
-            }
-            if (inputs[i].classList.contains("range")) {
-                if (inputs[i + 1] && inputs[i + 1].classList.contains("range") && inputs[i + 1].name === inputs[i].name) {
-                    parameters.value += `${inputs[i].name}:${inputs[i].value}~${inputs[i + 1].value},`;
-                    i++; // Skip the next input as it has been processed
-                } else {
-                    parameters.value += `${inputs[i].name}:${inputs[i].value}~,`;
-                }
-            } else {
-                parameters.value += `${inputs[i].name}:${inputs[i].value},`;
-            }
+@if (Model.Products != null)
+{
+    @foreach (var product in Model.Products)
+    {
+        <p>@product.ProductName</p>
+        foreach (var parameters in product.Parameters)
+        {
+            <p>@parameters.Key - @parameters.Value</p>
         }
-        // Remove the last comma if it exists
-        if (parameters.value.endsWith(',')) {
-            parameters.value = parameters.value.slice(0, -1);
+        <br />
+    }
+}
+
+
+<script>
+    document.getElementById("productForm").onsubmit = function () {
+        var productList = document.getElementsByClassName("product");
+        var parameters = document.getElementById("Parameters");
+
+        for (i = 0; i != productList.length; i++) {
+            if (parameters.classList.contains("range")) {
+                parameters.value += `${productList[i].name}:${productList[i].value}~${productList[i++].value},`;
+                parameters.value += "123";
+            }
+            else {
+                parameters.value += `${productList[i].name}:${productList[i].value},`;
+            }
         }
         console.log(parameters.value);
     }
