--- a/TapAndScroll.Web/Views/Catalog/Index.cshtml
+++ b/TapAndScroll.Web/Views/Catalog/Index.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <div class="category-form">
                 <h2>Создать Товар</h2>
-                <form id="filterForm" asp-controller="Catalog" asp-action="List" method="post">
+                <form id="filterForm" asp-controller="Catalog" asp-action="Index" method="post">
                     <input asp-for="@Model.FilterUpload.CategoryId" value="@Model.Category.IdCategory" hidden="hidden" />
                     <div class="mb-3">
                         <label asp-for="@Model.FilterUpload.Brand" class="form-label">Название Бренда</label>
@@ -62,6 +62,16 @@
     </div>
 </div>
 
+@if(Model.Products != null)
+{
+    foreach(var product in Model.Products)
+    {
+        <h2>@product.ProductName</h2>
+        <p>@product.Description</p>
+    }
+}
+
+
 <script>
     document.getElementById("filterForm").onsubmit = function () {
         let parameters = document.getElementById("Parameters");
@@ -73,13 +83,20 @@
             }
             if (inputs[i].classList.contains("range")) {
                 if (inputs[i + 1] && inputs[i + 1].classList.contains("range") && inputs[i + 1].name === inputs[i].name) {
-                    parameters.value += `${inputs[i].name}:${inputs[i].value}~${inputs[i + 1].value},`;
+                    // Assign default value of 0 if input value is empty
+                    const startValue = inputs[i].value || '0';
+                    const endValue = inputs[i + 1].value || '0';
+                    parameters.value += `${inputs[i].name}:${startValue}~${endValue},`;
                     i++; // Skip the next input as it has been processed
                 } else {
-                    parameters.value += `${inputs[i].name}:${inputs[i].value}~,`;
+                    // Assign default value of 0 if input value is empty
+                    const singleValue = inputs[i].value || '0';
+                    parameters.value += `${inputs[i].name}:${singleValue}~,`;
                 }
             } else {
-                parameters.value += `${inputs[i].name}:${inputs[i].value},`;
+                // Assign default value of 0 if input value is empty
+                const value = inputs[i].value || '0';
+                parameters.value += `${inputs[i].name}:${value},`;
             }
         }
         // Remove the last comma if it exists
