EditProduct: - Add ProductList fot AdminPage - Add EditProduct Page - Add ProductList Logic - Add EditProduct Logic - Fix img`s url on Product Page - Add Categories Page

--- a/TapAndScroll.Web/Views/Catalog/Product.cshtml
+++ b/TapAndScroll.Web/Views/Catalog/Product.cshtml
@@ -6,5 +6,5 @@
 <h1>@Model.ProductName</h1>
 @foreach(var img in Model.ImgsProduct)
 {
-    <img src="~/upload/img" />
+    <img src="~/upload/@img.ImgPath" />
 }
