--- a/TapAndScroll.Web/Views/Shared/_Layout.cshtml
+++ b/TapAndScroll.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Главная</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Каталог</a>
+                            <a class="nav-link" href="Catalog/Index">Каталог</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">О нас</a>
