CRUD Categories: - Add pages for Edit Category - Add Action for delete/edit - Fix bug wiht range-parameters

--- a/TapAndScroll.Web/Views/Admin/Index.cshtml
+++ b/TapAndScroll.Web/Views/Admin/Index.cshtml
@@ -16,12 +16,11 @@
                             Категории
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="categoriesDropdown">
-                            <li><a class="dropdown-item" href="#">Посмотреть все</a></li>
-                            <li><a class="dropdown-item" href="#">Изменить</a></li>
+                            <li><a class="dropdown-item" href="@Url.Action("CategoryList", "Admin")">Посмотреть все</a</li>
                             <li><a class="dropdown-item" href="@Url.Action("AddCategory", "Admin")">Добавить</a></li>
-                            <li><a class="dropdown-item" href="#">Удалить</a></li>
                         </ul>
                     </li>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="productsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Товары
