--- a/TapAndScroll.Web/Views/Authorize/Login.cshtml
+++ b/TapAndScroll.Web/Views/Authorize/Login.cshtml
@@ -9,7 +9,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="registration-form">
-                <h2>Регистрация</h2>
+                <h2>Авторизация</h2>
                 <form asp-controller="Authorize" asp-action="Login" method="post">
                     <div class="mb-3">
                         <label asp-for="Login" class="form-label">Логин пользователя</label>
